Fix missing border
tab-header was covering tab-section top border.

--- a/manager/media/style/default/css/tabpane.css
+++ b/manager/media/style/default/css/tabpane.css
@@ -244,7 +244,7 @@
 
 .tab-page .tab-section .tab-header:first-child,
 .tab-page .sectionHeader {
-  margin-top: -1px;
+  margin-top: 0;
   border-top: none
 }
 
